Fix height overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,4 @@ body {
   background: linear-gradient(90deg, #69b7eb, #b3dbd3, #f4d6db);
   font-size: 1.1rem;
   font-family: "Quicksand", sans-serif;
-  height: 100%;
 }
